--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "react": "16.9",
     "react-dom": "16.9",
-    "react-redux": "5.0.3",
+    "react-redux": "5.0.6",
+    "react-redux-7": "yarn:react-redux",
     "redux": "^2.0.0 || ^3.0.0",
-    "react-redux-7": "npm:react-redux@7.0.1"
+    "redux-4": "yarn:redux"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,5 +18,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
