--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "dependencies": {
     "react": "16.9",
     "react-dom": "16.9",
-    "react-redux": "5.0.6",
-    "react-redux-7": "yarn:react-redux",
-    "redux": "^2.0.0 || ^3.0.0",
-    "redux-4": "yarn:redux"
+    "react-redux": "7.2.2",
+    "redux": "^2.0.0 || ^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
